<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_acoount_sign_in_here">Already Have An Acoount ? Sign In Here.</string>
    <string name="login">Login</string>
    <string name="wellcome_you_are_logged_in">Wellcome! You Are Logged in.</string>
    <string name="logout">Logout</string>
</resources>